--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
 install:
 - pod repo update --silent
 - pod install --project-directory=Example
+- gem install fastlane -NV
 
 script:
 - pod lib lint
