--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ playground.xcworkspace
 Pods/
 
 # fastlane
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
-fastlane/test_output
+*/fastlane/report.xml
+*/fastlane/Preview.html
+*/fastlane/screenshots
+*/fastlane/test_output
