chore: fix ci installing slather

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ cache:
 before_install:
 - rvm install 2.3.3
 - gem install cocoapods
+- gem uninstall CFPropertyList -v 3.0
+- gem install CFPropertyList -v 2.3.6
 - gem install slather
 - gem install coveralls
 - gem install fastlane --version 2.93.1 --no-document
