--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,12 @@ cache:
 
 before_install:
 - rvm install 2.3.3
+- gem install cocoapods
+- gem install coveralls
+- gem install fastlane --version 2.93.1 --no-document
+- gem cleanup
 
 install:
-- bundle install
 - pod repo update --silent
 - pod install --project-directory=Example
 
