--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
 - rvm install 2.3.3
 - gem install cocoapods
 - gem install coveralls
+- gem install slather
 - gem install fastlane --version 2.93.1 --no-document
 - gem cleanup
 
