--- a/Example/UICurrencyTextField.xcodeproj/xcshareddata/xcschemes/UICurrencyTextFieldDemo.xcscheme
+++ b/Example/UICurrencyTextField.xcodeproj/xcshareddata/xcschemes/UICurrencyTextFieldDemo.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0930"
+   LastUpgradeVersion = "1010"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "D54170D5209023D5008995D7"
                BuildableName = "UICurrencyTextFieldDemo.app"
                BlueprintName = "UICurrencyTextFieldDemo"
-               ReferencedContainer = "container:UICurrencyTextFieldDemo.xcodeproj">
+               ReferencedContainer = "container:UICurrencyTextField.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -26,29 +26,8 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      codeCoverageEnabled = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "D54170E9209023D8008995D7"
-               BuildableName = "UICurrencyTextFieldDemoTests.xctest"
-               BlueprintName = "UICurrencyTextFieldDemoTests"
-               ReferencedContainer = "container:UICurrencyTextFieldDemo.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "D54170F4209023D8008995D7"
-               BuildableName = "UICurrencyTextFieldDemoUITests.xctest"
-               BlueprintName = "UICurrencyTextFieldDemoUITests"
-               ReferencedContainer = "container:UICurrencyTextFieldDemo.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
@@ -56,7 +35,7 @@
             BlueprintIdentifier = "D54170D5209023D5008995D7"
             BuildableName = "UICurrencyTextFieldDemo.app"
             BlueprintName = "UICurrencyTextFieldDemo"
-            ReferencedContainer = "container:UICurrencyTextFieldDemo.xcodeproj">
+            ReferencedContainer = "container:UICurrencyTextField.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -79,7 +58,7 @@
             BlueprintIdentifier = "D54170D5209023D5008995D7"
             BuildableName = "UICurrencyTextFieldDemo.app"
             BlueprintName = "UICurrencyTextFieldDemo"
-            ReferencedContainer = "container:UICurrencyTextFieldDemo.xcodeproj">
+            ReferencedContainer = "container:UICurrencyTextField.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -98,7 +77,7 @@
             BlueprintIdentifier = "D54170D5209023D5008995D7"
             BuildableName = "UICurrencyTextFieldDemo.app"
             BlueprintName = "UICurrencyTextFieldDemo"
-            ReferencedContainer = "container:UICurrencyTextFieldDemo.xcodeproj">
+            ReferencedContainer = "container:UICurrencyTextField.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
