--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,9 @@
-osx_image: xcode9
-language: objective-c
+osx_image: xcode10.1
+language: swift
 
 cache:
 - bundler
 - cocoapods
-
-before_install:
-- rvm install 2.3.3
-- gem install cocoapods
-- gem install slather
-- gem install coveralls
-- gem install fastlane --version 2.93.1 --no-document
-- gem cleanup
 
 install:
 - pod repo update --silent
