--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,24 @@
 osx_image: xcode10.1
 language: swift
+rvm:
+- 2.3.3
 
 cache:
 - bundler
 - cocoapods
 
+before_install:
+- gem install cocoapods
+- gem install slather
+- gem install coveralls
+- gem install fastlane --no-document
+
 install:
-- cd Example && bundle install
 - pod repo update --silent
 - pod install --project-directory=Example
 
 script:
-- cd .. && pod lib lint
+- pod lib lint
 
 after_success: 
 - cd Example && fastlane test
