--- a/Example/CurrencyText.xcodeproj/xcshareddata/xcschemes/UICurrencyTextFieldDemoTests.xcscheme
+++ b/Example/CurrencyText.xcodeproj/xcshareddata/xcschemes/UICurrencyTextFieldDemoTests.xcscheme
@@ -17,9 +17,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "D54170E9209023D8008995D7"
-               BuildableName = "UICurrencyTextFieldDemoTests.xctest"
-               BlueprintName = "UICurrencyTextFieldDemoTests"
-               ReferencedContainer = "container:UICurrencyTextField.xcodeproj">
+               BuildableName = "CurrencyTextDemoTests.xctest"
+               BlueprintName = "CurrencyTextDemoTests"
+               ReferencedContainer = "container:CurrencyText.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
