--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,18 @@
-osx_image: xcode10.2
+osx_image: xcode11
 language: swift
-rvm:
-- 2.4.5
 
 cache:
 - bundler
 - cocoapods
 
 before_install:
-- cd Example && bundle install && cd ..
+- cd Example && bundle install
 
 install:
-- pod install --project-directory=Example
+- bundle exec pod install
 
 script:
-- pod lib lint
+- cd .. && pod lib lint
 
 after_success: 
 - cd Example && bundle exec fastlane test
