Update project structure and imports

--- a/.swiftpm/xcode/xcshareddata/xcschemes/CurrencyText.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/CurrencyText.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "9999"
+   LastUpgradeVersion = "1110"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CurrencyText::CurrencyText"
-               BuildableName = "CurrencyText.framework"
+               BlueprintIdentifier = "CurrencyText"
+               BuildableName = "CurrencyText"
                BlueprintName = "CurrencyText"
-               ReferencedContainer = "container:CurrencyText.xcodeproj">
+               ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -28,10 +28,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CurrencyText::CurrencyFormatter"
-               BuildableName = "CurrencyFormatter.framework"
+               BlueprintIdentifier = "CurrencyFormatter"
+               BuildableName = "CurrencyFormatter"
                BlueprintName = "CurrencyFormatter"
-               ReferencedContainer = "container:CurrencyText.xcodeproj">
+               ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -42,16 +42,6 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CurrencyText::Tests"
-               BuildableName = "Tests.xctest"
-               BlueprintName = "Tests"
-               ReferencedContainer = "container:CurrencyText.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -71,6 +61,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "CurrencyText"
+            BuildableName = "CurrencyText"
+            BlueprintName = "CurrencyText"
+            ReferencedContainer = "container:">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
