--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,10 +5,8 @@ workspace '../CurrencyText'
 target 'Example' do
   use_frameworks!
 
-  pod 'CurrencyText', :path => '../'  
-
-  target 'ExampleTests' do
-    inherit! :search_paths
-  end
+  pod 'CurrencyText', :path => '../'
+#  pod 'CurrencyText/CurrencyFormatter', :path => '../'
+#  pod 'CurrencyText/CurrencyUITextField', :path => '../'
 
 end
