--- a/CurrencyText.xcodeproj/xcshareddata/xcschemes/CurrencyText-Package.xcscheme
+++ b/CurrencyText.xcodeproj/xcshareddata/xcschemes/CurrencyText-Package.xcscheme
@@ -14,6 +14,20 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CurrencyText::CurrencyUITextFieldDelegate"
+               BuildableName = "CurrencyUITextFieldDelegate.framework"
+               BlueprintName = "CurrencyUITextFieldDelegate"
+               ReferencedContainer = "container:CurrencyText.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "CurrencyText::CurrencyFormatter"
                BuildableName = "CurrencyFormatter.framework"
                BlueprintName = "CurrencyFormatter"
@@ -28,9 +42,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CurrencyText::CurrencyUITextFieldDelegate"
-               BuildableName = "CurrencyUITextFieldDelegate.framework"
-               BlueprintName = "CurrencyUITextFieldDelegate"
+               BlueprintIdentifier = "CurrencyText::CurrencyTextField"
+               BuildableName = "CurrencyTextField.framework"
+               BlueprintName = "CurrencyTextField"
                ReferencedContainer = "container:CurrencyText.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -40,15 +54,50 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CurrencyText::Tests"
-               BuildableName = "Tests.xctest"
-               BlueprintName = "Tests"
+               BlueprintIdentifier = "CurrencyText::CurrencyFormatterTests"
+               BuildableName = "CurrencyFormatterTests.xctest"
+               BlueprintName = "CurrencyFormatterTests"
+               ReferencedContainer = "container:CurrencyText.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            testExecutionOrdering = "random">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CurrencyText::CurrencyTextFieldSnapshotTests"
+               BuildableName = "CurrencyTextFieldSnapshotTests.xctest"
+               BlueprintName = "CurrencyTextFieldSnapshotTests"
+               ReferencedContainer = "container:CurrencyText.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            testExecutionOrdering = "random">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CurrencyText::CurrencyUITextFieldDelegateTests"
+               BuildableName = "CurrencyUITextFieldDelegateTests.xctest"
+               BlueprintName = "CurrencyUITextFieldDelegateTests"
+               ReferencedContainer = "container:CurrencyText.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            testExecutionOrdering = "random">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CurrencyText::CurrencyTextFieldTests"
+               BuildableName = "CurrencyTextFieldTests.xctest"
+               BlueprintName = "CurrencyTextFieldTests"
                ReferencedContainer = "container:CurrencyText.xcodeproj">
             </BuildableReference>
          </TestableReference>
