--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
+      
       - name: Check cache for Bundler dependencies
         uses: actions/cache@v2
         with:
@@ -20,10 +21,12 @@ jobs:
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-gems-
+
       - name: Run bundle install
         run: |
           bundle config path vendor/bundle
           bundle install
+
       - name: Check cache for Swift Package Manager dependencies
         uses: actions/cache@v2
         with:
@@ -31,10 +34,13 @@ jobs:
           key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
           restore-keys: |
             ${{ runner.os }}-spm-
+
       - name: Execute fastlane `test`
         run: bundle exec fastlane test
+
       - name: Report code coverage
         uses: codecov/codecov-action@v4
+        timeout-minutes: 10
         with:
           fail_ci_if_error: true
           token: ${{ secrets.CODECOV_TOKEN }}
