Cancel in progress in the same git ref

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,10 @@ on:
 env:
   DEVELOPER_DIR: /Applications/Xcode_15.4.app/Contents/Developer
 
+concurrency:
+  group: '${{ github.workflow }}-${{ github.head_ref }}'
+  cancel-in-progress: true
+
 jobs:
   test:
     name: "Test"
